--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,18 @@
 <resources>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#5B8900</color>
+
+    <color name="dark_gray">#FF1A1A1A</color>
+    <color name="light_gray">#FF333333</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+
+    <color name="profit_green">#4CAF50</color>
+    <color name="loss_red">#F44336</color>
 </resources>
